--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="tab-pane fade" id="nav-1photoGrid" role="tabpanel" aria-labelledby="nav-1photoGrid-tab" tabindex="0">       <!--SECOND TAB CONTENT -->
           <div class="tab-pane fade show active" id="nav-1photoGrid" role="tabpanel" aria-labelledby="nav-1photoGrid-tab" tabindex="0">       
             <div class="container d-flex align-items-center flex-column" id="PhotoGrid2">
-              <div class="card mt-3" style="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--FIRST CARD-->
+              <div class="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--FIRST CARD-->
                 <div class="d-flex mx-1">
                   <h5 class="card-title mt-2 fs-3">My crazy dog</h5>
                   <p class="ms-auto mt-1 fs-6 fw-semibold">04/09</p>    
@@ -121,7 +121,7 @@
                 </div>
               </div>
 
-              <div class="card mt-3" style="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--SECOND CARD-->
+              <div class="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--SECOND CARD-->
                 <div class="d-flex mx-1">
                   <h5 class="card-title mt-2 fs-3">Happiness</h5>
                   <p class="ms-auto mt-1 fs-6 fw-semibold">20/12</p>    
@@ -133,7 +133,7 @@
                 </div>
               </div>
               
-              <div class="card mt-3" style="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--THIRD CARD-->
+              <div class="card mt-3 col-12 col-md-8 col-lg-6">                                        <!--THIRD CARD-->
                 <div class="d-flex mx-1">
                   <h5 class="card-title mt-2 fs-3">Beautiful place</h5>
                   <p class="ms-auto mt-1 fs-6 fw-semibold">05/05</p>    
